--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<title>Fast Box Intersection</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" type="image/png" href="favicon.ico">
+</head>
+</head>
 <body>
-libfbi.
+<table class="canopy">
+<tr>
+<td class="logo">
+<img src="libfbi-small.png">
+</td>
+<td class="links">
+
+<a href="https://github.com/mkirchner/libfbi">libfbi @ github</a><br>
+<a href="doc/html">documentation</a><br>
+<a href="https://github.com/mkirchner/libfbi/issues">issue tracking</a><br>
+<a href="http://steenlab.org">steen &amp; steen lab</a><br>
+</td>
+</tr>
+</table>
+<table align="center">
+</table>
 </body>
 </html>
+
