--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     Visual Studio will only be available starting from Visual Studio 11</b>.
     </div>
     <div class="text">
-    Latest stable release: <a href="releases/libfbi-20101221.tar.gz">
-    libfbi-20101221.tar.gz</a><br>
+    Latest stable release: <a href="releases/libfbi-stable-20101222.tar.gz">
+    libfbi-stable-20101222.tar.gz</a><br>
     </div>
     <div class="text">
     Current development snapshot: via <a href="http://git-scm.com/">git</a> from
