--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="text">
     libfbi has so far been applied to feature extraction and data analysis
-    tasks for high-resolution liquid chromatorgraphy/mass spectrometry (LC/MS) 
+    tasks for high-resolution liquid chromatography/mass spectrometry (LC/MS) 
     data sets. The library itself, however, is in no way limited to this
     application scenario: it can easily be used to tackle many kinds of
     multi-dimensional box intersection and related problems (e.g. determining <a
@@ -71,7 +71,7 @@
     </div>
     <div class="text">
     The libfbi code is considered stable; it is actively maintained at <a
-    href="https://github.com/mkirchner/libfbi/">guithub</a>.
+    href="https://github.com/mkirchner/libfbi/">github</a>.
     If you happen to run into trouble, please do not hesitate
     to contact <a href="http://marc-kirchner.de">Marc</a> or to make use of the
     github <a href="https://github.com/mkirchner/libfbi/issues">issue
