--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
     libfbi has so far been applied to feature extraction and data analysis
     tasks for high-resolution liquid chromatography/mass spectrometry (LC/MS) 
     data sets. The library itself, however, is in no way limited to this
-    application scenario: it can easily be used to tackle many kinds of
-    multi-dimensional box intersection and related problems (e.g. determining <a
+    application scenario: it can easily be used to solve, accelerate or
+    simplify many kinds of multi-dimensional box intersection and related
+    problems (e.g. determining <a
     href="http://en.wikipedia.org/wiki/Bounding_volume">bounding volumes</a>,
     <a
     href="http://en.wikipedia.org/wiki/K-nearest_neighbor_algorithm">k-nearest-neighbor
     search</a>, <a
     href="http://en.wikipedia.org/wiki/Kernel_density_estimation">density
-    estimation</a>, correspondence estimation in motion or pattern
-    alignment tasks, etc.).
+    estimation</a>, <a
+    href="http://en.wikipedia.org/wiki/3D_Pose_Estimation">correspondence</a>
+    and <a href="http://en.wikipedia.org/wiki/Optical_flow">motion</a>
+    estimation, <a
+    href="http://en.wikipedia.org/wiki/Structural_alignment">alignment
+    tasks</a>, and more).
     </div>
     <div class="text">
     libfbi development has been conducted at the 
