added website stats

--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
 </td>
 </tr>
 </table>
+<!-- Start of StatCounter Code -->
+<script type="text/javascript">
+    var sc_project=6806531; 
+    var sc_invisible=1; 
+    var sc_security="120bf512"; 
+</script>
+
+<script type="text/javascript"
+    src="http://www.statcounter.com/counter/counter.js"></script><noscript><div
+        class="statcounter"><a title="counter for tumblr"
+            href="http://statcounter.com/tumblr/" target="_blank"><img
+            class="statcounter"
+            src="http://c.statcounter.com/6806531/0/120bf512/1/"
+            alt="counter for tumblr" ></a></div></noscript>
+<!-- End of StatCounter Code -->
 </body>
 </html>
 
