--- a/index.html
+++ b/index.html
@@ -98,12 +98,11 @@
     Visual Studio will only be available starting from Visual Studio 11.
     </div>
     <div class="text">
-    Latest stable release: <a href="releases/libfbi-stable-20101222.tar.gz">
+    Latest stable release: <a href="releases/libfbi-1.1.1-Source-notestdata.tar.gz">
     libfbi-stable-20101222.tar.gz</a><br>
     </div>
     <div class="text">
-    Current development snapshot: via <a href="http://git-scm.com/">git clone</a> from
-    <a href="https://github.com/mkirchner/libfbi">github</a>.
+    Current development snapshot: <a href="https://github.com/mkirchner/libfbi">github</a>.
     </div>
 </div>
 </td>
