updating name of release

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="text">
     Latest stable release: <a href="releases/libfbi-1.1.1-Source-notestdata.tar.gz">
-    libfbi-stable-20101222.tar.gz</a><br>
+    sources</a><br>
     </div>
     <div class="text">
     Current development snapshot: <a href="https://github.com/mkirchner/libfbi">github</a>.
