--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
     </div>
     <div class="text">
     Latest stable release: <a href="releases/libfbi-1.1.1-Source-notestdata.tar.gz">
-    sources</a><br>
+    sources</a> (w/o test datasets).<br>
     </div>
     <div class="text">
-    Current development snapshot: <a href="https://github.com/mkirchner/libfbi">github</a>.
+        Current development snapshot: <a href="https://github.com/mkirchner/libfbi">github</a>
+        (includes test datasets).
     </div>
 </div>
 </td>
